2007-06-05  Kevin McCullough  <kmccullough@apple.com>
        Reviewed by.

        - Respelling Oliver's name right.

2007-06-05  Kevin McCullough  <kmccullough@apple.com>
        Reviewed by Mark and Oliver.

        - http://bugs.webkit.org/show_bug.cgi?id=13352  REGRESSION: Gmail hangs on send message.
        - Now we don't hang, but we do so by avoiding certain legitimate characters, the evangelism bug for this is: <rdar://problem/5252577> gmail does not accept legal characters in the form boundary

        * html/HTMLFormElement.cpp:
        (WebCore::getUniqueBoundaryString):

2007-06-05  Anders Carlsson  <andersca@apple.com>

        Build fix.
        
        * xml/xmlhttprequest.cpp:
        (WebCore::isValidToken):

2007-06-05  Anders Carlsson  <andersca@apple.com>

        Reviewed by Geoff.

        <rdar://problem/5245555> REGRESSION: HTTP header injection in XMLHttpRequest.setRequestHeader
        <rdar://problem/5246208> HTTP injection in XMLHttpRequest.open method parameter
        <rdar://problem/5246242> HTTP header injection in HXMLHttpRequest.setRequestHeader header parameter
        
        Check method names, header names and header values and throw exceptions if any of them are
        invalid. This is what the new XMLHttpRequest spec states that we should do.
        
        * xml/xmlhttprequest.cpp:
        (WebCore::isValidToken):
        (WebCore::isValidHeaderValue):
        (WebCore::XMLHttpRequest::open):
        (WebCore::XMLHttpRequest::setRequestHeader):

2007-06-05  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoff.

        Optimize JSCSSStyleDeclaration after performance regression in r21854.

        - Check static table before name getter in JSCSSStyleDeclaration::getOwnPropertySlot()
        - Get rid of a string allocation by keeping string as KJS::Identifier for canGetItemsForName()
          functions.

        * WebCore.xcodeproj/project.pbxproj:
        * bindings/js/JSCSSStyleDeclarationCustom.cpp: